# mybot

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  chanserv.c  config-h.in  config.c  config.h  config.status  configure  configure.ac  defines.h  dice.c  functions.c  includes.h  main.c  mybot.exe.stackdump  parse.c  past.txt  prototypes.h  random.c  randq.c  sendq.c  server_cmds.c  server_cmds.h  signals.c  sockets.c  todo.txt  user_cmds.c  userlist.c  usrcmds.c  vars.c  vars.h
Lottery/: Lottery.dsp  Lottery.dsw  Lottery.ncb  Lottery.opt
autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
dat/: setup.ini
